Add reference section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
 
     <h2>Reference</h2>
 
+    <p>This section has some references:</p>
+
+    <ul>
+        <li>Item1</li>
+        <li>Item2</li>
+    </ul>
+
 </body>
 
 </html>
